--- a/index.html
+++ b/index.html
@@ -2989,7 +2989,9 @@
                             <!-- Logo -->
                             <div class="mzo3c m8lr6">
                                 <a href="#pricing" class="mzo3c m8lr6 n9lx6 u6njj" style="text-decoration: none; gap: 0.75rem;">
-                                    <img src="https://lusive.xyz/assets/img/logo.png" alt="Lusive Logo" class="fzv0j m51hs" style="height: 32px; width: auto;"/>
+                                    <img src="<img src="https://ibb.co/pvhFQRJ0" alt="Lusive Logo" class="fzv0j m51hs" style="height: 32px; width: auto;"/>
+                                    <span class="r75jb gxjl7 bmb9s bl283" style="color: #ffffff; font-weight: 600; letter-spacing: 0.5px; font-size: 1.25rem;">LUSIVE</span>
+                                </a>" alt="Lusive Logo" class="fzv0j m51hs" style="height: 32px; width: auto;"/>
                                     <span class="r75jb gxjl7 bmb9s bl283" style="color: #ffffff; font-weight: 600; letter-spacing: 0.5px; font-size: 1.25rem;">LUSIVE</span>
                                 </a>
                             </div>
@@ -5565,3 +5567,4 @@
         </div>
     </body>
 </html>
+
