Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -2989,9 +2989,7 @@
                             <!-- Logo -->
                             <div class="mzo3c m8lr6">
                                 <a href="#pricing" class="mzo3c m8lr6 n9lx6 u6njj" style="text-decoration: none; gap: 0.75rem;">
-                                    <img src="<img src="https://ibb.co/pvhFQRJ0" alt="Lusive Logo" class="fzv0j m51hs" style="height: 32px; width: auto;"/>
-                                    <span class="r75jb gxjl7 bmb9s bl283" style="color: #ffffff; font-weight: 600; letter-spacing: 0.5px; font-size: 1.25rem;">LUSIVE</span>
-                                </a>" alt="Lusive Logo" class="fzv0j m51hs" style="height: 32px; width: auto;"/>
+                                    <img src="https://i.ibb.co/pvhFQRJ0/logo.png" alt="Lusive Logo" class="fzv0j m51hs" style="height: 32px; width: auto;"/>
                                     <span class="r75jb gxjl7 bmb9s bl283" style="color: #ffffff; font-weight: 600; letter-spacing: 0.5px; font-size: 1.25rem;">LUSIVE</span>
                                 </a>
                             </div>
@@ -5064,7 +5062,7 @@
                         <div class="mzo3c t4er6 bpcfv isn7p y12hf kmmpd zajs2">
                             <div class="mzo3c g3r6a n9lx6 bpcfv nkeup">
                                 <a href="https://lusive.xyz" class="mzo3c m8lr6 n9lx6">
-                                    <img src="/assets/img/logo.png" alt="" class="jy8l2 z9rba"/>
+                                    <img src="https://lusive.xyz/assets/img/logo.png" alt="" class="jy8l2 z9rba"/>
                                     <span class="rahi2 bhv4d jm5nu bl283 mn0bv qjhvx bw83h">LUSIVE</span>
                                 </a>
                                 <p class="bhv4d wp1th e8tmh roqk6 roqk6">© 2025 Lusive. All rights reserved.
@@ -5567,4 +5565,3 @@
         </div>
     </body>
 </html>
-
