--- a/index.html
+++ b/index.html
@@ -3006,6 +3006,7 @@
                                 <a href="#pricing" class="eznj4 osdmy nk10m c5nfk" style="color: #e5e7eb; text-decoration: none; font-size: 0.9375rem; font-weight: 500; transition: color 0.2s; white-space: nowrap;" onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#e5e7eb'">Products</a>
                                 <a href="#reviews" class="eznj4 osdmy nk10m c5nfk" style="color: #e5e7eb; text-decoration: none; font-size: 0.9375rem; font-weight: 500; transition: color 0.2s; white-space: nowrap;" onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#e5e7eb'">Reviews</a>
                                 <a href="https://discord.gg/lusiveofficial" target="_blank" class="eznj4 osdmy nk10m c5nfk" style="color: #e5e7eb; text-decoration: none; font-size: 0.9375rem; font-weight: 500; transition: color 0.2s; white-space: nowrap;" onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#e5e7eb'">Discord</a>
+                                <a href="status.html" class="eznj4 osdmy nk10m c5nfk" style="color: #e5e7eb; text-decoration: none; font-size: 0.9375rem; font-weight: 500; transition: color 0.2s; white-space: nowrap;" onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#e5e7eb'">Status</a>
                                 </div>
                             
                             <!-- Dashboard Button -->
@@ -3026,6 +3027,7 @@
                                     <a href="#pricing" x-on:click="isCollapsed = true" class="eznj4" style="color: #e5e7eb; text-decoration: none; padding: 0.75rem 0; font-weight: 500;">Products</a>
                                     <a href="#reviews" x-on:click="isCollapsed = true" class="eznj4" style="color: #e5e7eb; text-decoration: none; padding: 0.75rem 0; font-weight: 500;">Reviews</a>
                                     <a href="https://discord.gg/lusiveofficial" target="_blank" class="eznj4" style="color: #e5e7eb; text-decoration: none; padding: 0.75rem 0; font-weight: 500;">Discord</a>
+                                    <a href="status.html" x-on:click="isCollapsed = true" class="eznj4" style="color: #e5e7eb; text-decoration: none; padding: 0.75rem 0; font-weight: 500;">Status</a>
                                 </div>
                             </div>
                         </div>
